# GPD-LinuxControls

./: .gitignore  42-gpd-controls.rules  Cargo.toml  LICENSE  README.md  flake.nix  index.md  result
cli/: Cargo.toml
cli/src/: cli.rs  helper.rs  main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/controls_field/: back_button.rs  dead_zones.rs  hid_usage_id_u8.rs  keyboard_mouse.rs  mod.rs
lib/src/enums/: hid_usage_id.rs  mod.rs
lib/src/protocol/: command.rs  function.rs  mod.rs  raw.rs
serialize_display_adapter_macro_derive/: Cargo.toml  README.md
serialize_display_adapter_macro_derive/src/: lib.rs
