[workspace]
resolver = "2"

members = [
    "cli",
    "lib",
    "serialize_display_adapter_macro_derive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cryolitia <Cryolitia@gmail.com>"]
description = "A reverse engineered and reference implementation of GPD WinControls"
homepage = "https://github.com/Cryolitia/GPD-LinuxControls"
repository = "https://github.com/Cryolitia/GPD-LinuxControls"
license = "MIT"

[workspace.dependencies]
log = "0.4.20"
serde_json = "1.0.113"
clap = { version = "4.4.18", features = ["derive"] }
regex = { version = "1.10.3", features = ["std", "logging", "perf"] }
strum = { version = "0.26.1", features = ["strum_macros"] }
lazy_static = "1.4.0"
colored = "2.1.0"