[workspace]
resolver = "2"

members = [
    "cli",
    "lib",
    "serialize_display_adapter_macro_derive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cryolitia <Cryolitia@gmail.com>"]
description = "A reverse engineered and reference implementation of GPD WinControls"
homepage = "https://github.com/Cryolitia/GPD-LinuxControls"
repository = "https://github.com/Cryolitia/GPD-LinuxControls"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
clap = { version = "4.4.18", features = ["derive"] }
