[package]
name = "gpd_linuxcontrols_cli"
categories = ["command-line-utilities", "hardware-support"]
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
gpd_linuxcontrols = { path = "../lib" }
serde_json.workspace = true
clap.workspace = true
clap-verbosity-flag = "2.1.2"
env_logger = "0.11.1"
hex = "0.4.3"
clio = { version = "0.3.5", features = ["clap-parse"] }
