[package]
name = "gpd_linuxcontrols"
categories = ["hardware-support"]
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serialize_display_adapter_macro_derive = { path = "../serialize_display_adapter_macro_derive" }
log.workspace = true
serde_json.workspace = true
clap.workspace = true
regex.workspace = true
strum.workspace = true
lazy_static.workspace = true
colored.workspace = true
serde = { version = "1.0.196", features = ["derive"] }
strum_macros = "0.26.1"
num_enum = "0.7.2"
rusb = "0.9.3"
