[package]
name = "gpd_linuxcontrols"
categories = ["hardware-support"]
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serialize_display_adapter_macro_derive = { path = "../serialize_display_adapter_macro_derive" }
serde_json.workspace = true
clap.workspace = true
log = "0.4.20"
regex = { version = "1.10.3", features = ["std", "logging", "perf"] }
strum = { version = "0.26.1", features = ["strum_macros"] }
lazy_static = "1.4.0"
colored = "2.1.0"
serde = { version = "1.0.196", features = ["derive"] }
strum_macros = "0.26.1"
num_enum = "0.7.2"
rusb = "0.9.3"
