[package]
name = "serialize_display_adapter_macro_derive"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Cryolitia <Cryolitia@gmail.com>"]
homepage = "https://github.com/Cryolitia/GPD-LinuxControls/tree/main/serialize_display_adapter_macro_derive"
description = "Automatically impl Display for struct that implementated serde::Serialize"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = "2.0.49"

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
